--- a/Report/page0.lyx
+++ b/Report/page0.lyx
@@ -324,13 +324,10 @@ name "tab:Specifications."
 
 \begin_layout Standard
 \begin_inset Float table
+placement h
 wide false
 sideways false
 status open
-
-\begin_layout Plain Layout
-
-\end_layout
 
 \begin_layout Plain Layout
 \align center
